# MARS_EYE_NEW_TEST

./: CMakeLists.txt  Main.qml  Theme.qml  ThemeProperties.qml  main.cpp
models/: cameramodel.cpp  cameramodel.h  joystickreceiver.cpp  joystickreceiver.h  mediamanager.cpp  mediamanager.h  serialmodel.cpp  serialmodel.h  serialworker.cpp  serialworker.h  thermalcameramodel.cpp  thermalcameramodel.h
view/: CameraControlBar.qml  ControlsPanel.qml  MapPanel.qml  TelemetryPanel.qml  TopBar.qml  VisualizationPanel.qml  joystickreceiver.cpp  joystickreceiver.h
viewmodels/: cameraviewmodel.cpp  cameraviewmodel.h  mapviewmodel.cpp  mapviewmodel.h  mediamanagerviewmodel.cpp  mediamanagerviewmodel.h  serialviewmodel.cpp  serialviewmodel.h  thermalcameraviewmodel.cpp  thermalcameraviewmodel.h
